fixed margin field and field-wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -766,11 +766,12 @@ img {
 }
 
 .modal-field {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .modal-field-wrap {
   position: relative;
+  margin-bottom: 8px;
 }
 
 .modal-icon {
